Adding Google Gemini AI example app
Signed-off-by: Harry Kimpel <harrykimpel@hotmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@
 .vscode
 chat-frontend/.venv
 chat-frontend/__pycache__
+2-python-openai-newrelic/__pycache__
+2-python-openai-newrelic/.venv
+2-python-openai-newrelic/newrelic-python-agent.log
+2-python-gemini-newrelic/__pycache__
+2-python-gemini-newrelic/.venv
+2-python-gemini-newrelic/newrelic-python-agent.log
+
