--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 .vscode
 chat-frontend/.venv
 chat-frontend/__pycache__
+1-python-gemini/__pycache__
+1-python-gemini/.venv
 2-python-openai-newrelic/__pycache__
 2-python-openai-newrelic/.venv
 2-python-openai-newrelic/newrelic-python-agent.log
