--- a/2-python-bedrock-newrelic/newrelic.ini
+++ b/2-python-bedrock-newrelic/newrelic.ini
@@ -15,7 +15,7 @@
 # For further discussion on the behaviour of the Python agent that can
 # be configured via this configuration file see:
 #
-#    http://newrelic.com/docs/python/python-agent-configuration
+#    https://docs.newrelic.com/docs/apm/agents/python-agent/configuration/python-agent-configuration/
 #
 
 # ---------------------------------------------------------------------------
@@ -25,37 +25,39 @@
 [newrelic]
 
 # You must specify the license key associated with your New
-# Relic account. This key binds the Python Agent's data to your
-# account in the New Relic service.
+# Relic account. This may also be set using the NEW_RELIC_LICENSE_KEY
+# environment variable. This key binds the Python Agent's data to
+# your account in the New Relic service. For more information on
+# storing and generating license keys, see
+# https://docs.newrelic.com/docs/apis/intro-apis/new-relic-api-keys/#ingest-license-key
 #license_key = NEW_RELIC_LICENSE_KEY
 
 # The application name. Set this to be the name of your
 # application as you would like it to show up in New Relic UI.
+# You may also set this using the NEW_RELIC_APP_NAME environment variable.
 # The UI will then auto-map instances of your application into a
-# entry on your home dashboard page.
-app_name = instruqt-ai-bot
-
-# New Relic offers distributed tracing for monitoring and analyzing modern
-# distributed systems.Enable distributed tracing.
-distributed_tracing.enabled = true
+# entry on your home dashboard page. You can also specify multiple
+# app names to group your aggregated data. For further details,
+# please see:
+# https://docs.newrelic.com/docs/apm/agents/manage-apm-agents/app-naming/use-multiple-names-app/
+app_name = gen-ai-bedrock
 
 # When "true", the agent collects performance data about your
 # application and reports this data to the New Relic UI at
 # newrelic.com. This global switch is normally overridden for
-# each environment below.
+# each environment below. It may also be set using the
+# NEW_RELIC_MONITOR_MODE environment variable.
 monitor_mode = true
 
-# Sets the name of a file to log agent messages to. Useful for
-# debugging any issues with the agent. This is not set by
-# default as it is not known in advance what user your web
-# application processes will run as and where they have
-# permission to write to. Whatever you set this to you must
-# ensure that the permissions for the containing directory and
-# the file itself are correct, and that the user that your web
-# application runs as can write to the file. If not able to
-# write out a log file, it is also possible to say "stderr" and
-# output to standard error output. This would normally result in
-# output appearing in your web server log.
+# Sets the name of a file to log agent messages to. Whatever you
+# set this to, you must ensure that the permissions for the
+# containing directory and the file itself are correct, and
+# that the user that your web application runs as can write out
+# to the file. If not able to out a log file, it is also
+# possible to say "stderr" and output to standard error output.
+# This would normally result in output appearing in your web
+# server log. It can also be set using the NEW_RELIC_LOG
+# environment variable.
 log_file = newrelic-python-agent.log
 
 # Sets the level of detail of messages sent to the log file, if
@@ -66,28 +68,19 @@ log_file = newrelic-python-agent.log
 # support engineers is "debug". However, this can generate a lot
 # of information very quickly, so it is best not to keep the
 # agent at this level for longer than it takes to reproduce the
-# problem you are experiencing.
-log_level = debug
+# problem you are experiencing. This may also be set using the
+# NEW_RELIC_LOG_LEVEL environment variable.
+log_level = info
 
-# The Python Agent communicates with the New Relic service using
-# SSL by default. Note that this does result in an increase in
-# CPU overhead, over and above what would occur for a non SSL
-# connection, to perform the encryption involved in the SSL
-# communication. This work is though done in a distinct thread
-# to those handling your web requests, so it should not impact
-# response times. You can if you wish revert to using a non SSL
-# connection, but this will result in information being sent
-# over a plain socket connection and will not be as secure.
-ssl = true
-
-# High Security Mode enforces certain security settings, and
-# prevents them from being overridden, so that no sensitive data
-# is sent to New Relic. Enabling High Security Mode means that
-# SSL is turned on, request parameters are not collected, and SQL
-# can not be sent to New Relic in its raw form. To activate High
-# Security Mode, it must be set to 'true' in this local .ini
-# configuration file AND be set to 'true' in the server-side
-# configuration in the New Relic user interface. For details, see
+# High Security Mode enforces certain security settings, and prevents
+# them from being overridden, so that no sensitive data is sent to New
+# Relic. Enabling High Security Mode means that request parameters are
+# not collected and SQL can not be sent to New Relic in its raw form.
+# To activate High Security Mode, it must be set to 'true' in this
+# local .ini configuration file AND be set to 'true' in the
+# server-side configuration in the New Relic user interface. It can
+# also be set using the NEW_RELIC_HIGH_SECURITY environment variable.
+# For details, see
 # https://docs.newrelic.com/docs/subscriptions/high-security
 high_security = false
 
@@ -103,6 +96,8 @@ high_security = false
 # would normally always be set as "http" which will result in the
 # agent then using a SSL tunnel through the HTTP proxy for end to
 # end encryption.
+# See https://docs.newrelic.com/docs/apm/agents/python-agent/configuration/python-agent-configuration/#proxy
+# for information on proxy configuration via environment variables.
 # proxy_scheme = http
 # proxy_host = hostname
 # proxy_port = 8080
@@ -163,13 +158,20 @@ transaction_tracer.function_trace =
 # The error collector captures information about uncaught
 # exceptions or logged exceptions and sends them to UI for
 # viewing. The error collector is enabled by default. Set this
-# to "false" to turn it off.
+# to "false" to turn it off. For more details on errors, see
+# https://docs.newrelic.com/docs/apm/agents/manage-apm-agents/agent-data/manage-errors-apm-collect-ignore-or-mark-expected/
 error_collector.enabled = true
 
 # To stop specific errors from reporting to the UI, set this to
 # a space separated list of the Python exception type names to
 # ignore. The exception name should be of the form 'module:class'.
-error_collector.ignore_errors =
+error_collector.ignore_classes =
+
+# Expected errors are reported to the UI but will not affect the
+# Apdex or error rate. To mark specific errors as expected, set this
+# to a space separated list of the Python exception type names to
+# expected. The exception name should be of the form 'module:class'.
+error_collector.expected_classes =
 
 # Browser monitoring is the Real User Monitoring feature of the UI.
 # For those Python web frameworks that are supported, this
@@ -181,15 +183,56 @@ browser_monitoring.auto_instrument = true
 # this option is enabled. The thread profiler will periodically
 # capture a snapshot of the call stack for each active thread in
 # the application to construct a statistically representative
-# call tree.
+# call tree. For more details on the thread profiler tool, see
+# https://docs.newrelic.com/docs/apm/apm-ui-pages/events/thread-profiler-tool/
 thread_profiler.enabled = true
 
-machine_learning.enabled = true
-ml_insights_events.enabled = true
+# Your application deployments can be recorded through the
+# New Relic REST API. To use this feature provide your API key
+# below then use the `newrelic-admin record-deploy` command.
+# This can also be set using the NEW_RELIC_API_KEY
+# environment variable.
+# api_key =
+
+# Distributed tracing lets you see the path that a request takes
+# through your distributed system. For more information, please
+# consult our distributed tracing planning guide.
+# https://docs.newrelic.com/docs/transition-guide-distributed-tracing
+distributed_tracing.enabled = true
+
+# This setting enables log decoration, the forwarding of log events,
+# and the collection of logging metrics if these sub-feature
+# configurations are also enabled. If this setting is false, no
+# logging instrumentation features are enabled. This can also be
+# set using the NEW_RELIC_APPLICATION_LOGGING_ENABLED environment
+# variable.
+# application_logging.enabled = true
+
+# If true, the agent captures log records emitted by your application
+# and forwards them to New Relic. `application_logging.enabled` must
+# also be true for this setting to take effect. You can also set
+# this using the NEW_RELIC_APPLICATION_LOGGING_FORWARDING_ENABLED
+# environment variable.
+# application_logging.forwarding.enabled = true
+
+# If true, the agent decorates logs with metadata to link to entities,
+# hosts, traces, and spans. `application_logging.enabled` must also
+# be true for this setting to take effect. This can also be set
+# using the NEW_RELIC_APPLICATION_LOGGING_LOCAL_DECORATING_ENABLED
+# environment variable.
+# application_logging.local_decorating.enabled = true
+
+# If true, the agent captures metrics related to the log lines
+# being sent up by your application. This can also be set
+# using the NEW_RELIC_APPLICATION_LOGGING_METRICS_ENABLED
+# environment variable.
+# application_logging.metrics.enabled = true
+
+# Optimizations for LLM monitoring
+ai_monitoring.enabled = true
 custom_insights_events.max_attribute_value = 4095
 event_harvest_config.harvest_limits.custom_event_data = 100000
-
-ai_monitoring.enabled = true
+event_harvest_config.harvest_limits.span_event_data = 10000
 
 # ---------------------------------------------------------------------------
 
@@ -208,7 +251,7 @@ monitor_mode = false
 monitor_mode = false
 
 [newrelic:staging]
-app_name = MyAIBot (Staging)
+app_name = tets (Staging)
 monitor_mode = true
 
 [newrelic:production]
