update newrelic configurations

--- a/4-python-autogen-mcp-github/.env.example
+++ b/4-python-autogen-mcp-github/.env.example
@@ -2,7 +2,11 @@
 # Copy to .env (root) or into server/.env and tools/.env as needed.
 
 #New Relic configuration
-NEW_RELIC_APP_NAME=agent-mcp-github
+# for main app agents.py
+NEW_RELIC_APP_NAME=autogen-agent-app
+
+#for tools server
+#NEW_RELIC_APP_NAME=agent-mcp-tools
 NEW_RELIC_LICENSE_KEY=yourNewRelicIngestLicenseKey
 
 # GitHub Models (OpenAI-compatible) endpoint + auth
