updated .env for agent example

--- a/4-python-autogen-mcp-github/.env.example
+++ b/4-python-autogen-mcp-github/.env.example
@@ -12,4 +12,4 @@ NEW_RELIC_LICENSE_KEY=yourNewRelicIngestLicenseKey
 # GitHub Models (OpenAI-compatible) endpoint + auth
 OPENAI_API_KEY=ghp_yourTokenWithModelsReadScope
 OPENAI_BASE_URL=https://models.inference.ai.azure.com
-LLM_MODEL=gpt-4.1-mini
+LLM_MODEL=gpt-4o-mini
