updated .env file for automated mapping

--- a/4-python-autogen-mcp-github/.env.example
+++ b/4-python-autogen-mcp-github/.env.example
@@ -3,7 +3,7 @@
 
 #New Relic configuration
 # for main app agents.py
-NEW_RELIC_APP_NAME=autogen-agent-app
+#NEW_RELIC_APP_NAME=autogen-agent-app
 
 #for tools server
 #NEW_RELIC_APP_NAME=agent-mcp-tools
