sample prompts in client, dt headers, response summaries, scripts to start and stop, local json logs

--- a/4-python-autogen-mcp-github/pyproject.toml
+++ b/4-python-autogen-mcp-github/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
-name = "mcp-testingt"
+name = "mcp-testing"
 version = "0.0.1"
 description = "A simple MCP server exposing a customizable prompt"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.10,<3.14"
 authors = [{ name = "New Relic" }]
 maintainers = [
     { name = "Josh B.", email = "jbonczkowski@newrelic.com" },
@@ -23,7 +23,7 @@ dependencies = [
     "click>=8.1.0",
     "dotenv>=0.9.9",
     "fastapi>=0.115.12",
-    "fastmcp>=2.1.2",
+    "fastmcp>=2.3.3",
     "httpx>=0.27",
     "mcp",
     "newrelic>=10.9.0",
@@ -46,9 +46,10 @@ build-backend = "hatchling.build"
 packages = ["server", "client"]
 
 [tool.pyright]
-include = ["server", "client"]
+include = ["server", "client", "tools", "util"]
 venvPath = "."
 venv = ".venv"
+pythonVersion = "3.13"
 
 [tool.ruff.lint]
 select = ["E", "F", "I"]
@@ -58,5 +59,5 @@ ignore = []
 line-length = 88
 target-version = "py310"
 
-[tool.uv]
-dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]
+[dependency-groups]
+dev = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]
