updated valid models that support function calling, script to copy and configure env files

--- a/4-python-autogen-mcp-github/.env.example
+++ b/4-python-autogen-mcp-github/.env.example
@@ -3,10 +3,10 @@
 
 #New Relic configuration
 # for main app agents.py
-#NEW_RELIC_APP_NAME=agent-api
+#NEW_RELIC_APP_NAME=autogen-agent-app
 NEW_RELIC_ENABLED=1
 #for tools server
-NEW_RELIC_APP_NAME=mcp-tools-api
+#NEW_RELIC_APP_NAME=agent-mcp-tools
 NEW_RELIC_LICENSE_KEY=yourNewRelicIngestLicenseKey
 NEW_RELIC_MACHINE_LEARNING_ENABLED=true
 NEW_RELIC_AI_MONITORING_ENABLED=true
@@ -25,8 +25,8 @@ OPENAI_BASE_URL=https://models.inference.ai.azure.com
 # Each request will use a different model from this list in rotation
 # NOTE: Only use models that support function calling (tools)
 # NOTE: Only use models available in GitHub Models API
-# Balanced selection across performance tiers
-LLM_MODELS=gpt-4o-mini,gpt-4.1-mini,gpt-5-nano,gpt-5-mini,Mistral-Small-3.1
+# Valid models: gpt-4o-mini, gpt-4o
+LLM_MODELS=gpt-4o-mini,gpt-4o
 # Fallback if LLM_MODELS is not set
 LLM_MODEL=gpt-4o-mini
 
