added validation for environment variables and disabled config settings

--- a/4-python-autogen-mcp-github/.env.example
+++ b/4-python-autogen-mcp-github/.env.example
@@ -32,7 +32,7 @@ LLM_MODEL=gpt-4o-mini
 
 # Disable SSL verification (for development/corporate proxy environments only)
 # Set to "false" to disable SSL verification
-HTTPX_VERIFY=false
+HTTPX_VERIFY=true
 
 # Weather API configuration (optional - for get_weather tool)
 OPENWEATHER_API_KEY=your_openweather_api_key_here
