--- a/2-python-github-newrelic/newrelic.ini
+++ b/2-python-github-newrelic/newrelic.ini
@@ -190,6 +190,7 @@ custom_insights_events.max_attribute_value = 4095
 event_harvest_config.harvest_limits.custom_event_data = 100000
 
 ai_monitoring.enabled = true
+# ai_monitoring.record_content.enabled=false
 
 # ---------------------------------------------------------------------------
 
